--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,4 +27,12 @@ footer {
   color: white;
   font-size: 23px;
   font-weight: bold;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+}
+.btn-nav {
+  color: white;
+}
+.hero {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+  font-size: 18px; 
 }
